# dash

./: .gitattributes  .gitignore  ATMVAR.f90  Abcalc.for  Align.f90  AllFFCalc.inc  AllFFCalc_new.inc  Basic_Date.f90  Basic_Files.f90  Basic_IO.f90  Basic_Strings.f90  Basic_Vectors.f90  BatchMode.f90  BeginSa.f90  CCDC_CPLUSPLUS_CODE_BINDINGS.f90  CCDC_LICENSE_BINDINGS.f90  CMakeLists.txt  Ccslmain.f90  Ccslmain.for  Cell.inc  Chi_sq_plot.F90  DASH.map  DICVAR.f90  DICVO2.f90  DICVO3.f90  DICVO4.f90  DICVO5.f90  DICVO6.f90  DICVO7.f90  DICVOL91.f90  Declarations.f90  DialogPosCmn.inc  DialogPosCmnF90.inc  Dialog_Routines.f90  DoAtomPositions.f90  DoAtomPositions.for  Eval.f90  Eval.for  Example.dash  Example.dsl  (+215 more)
.devcontainer/: Dockerfile  devcontainer.json  fetch-winteracter.sh  gdb-oneapi
.github/workflows/: common_ccdc_status_checks.yml
Encode/: ENCODE.f90  Encode.dsp  Encode.plg
Extinction Symbol Documents/: Advanced.asc  Dopmmm.hkl  ESMANUAL for DASH.DOC  parameter_input.asc
Polarisation/: POLARISATION.f90  Polarisation.dsp  Polarisation.plg
Polarisation/Debug/: corrected.xye  dash.out  fort.56  fort.76  fort.85  fort.91  fort.92  fort.93  fort.94  multi.pro  sildenafil.xye
SGinc/: ffcalc_001.f90  ffcalc_001.inc  ffcalc_002.f90  ffcalc_002.inc  ffcalc_039.f90  ffcalc_039.inc  ffcalc_040.f90  ffcalc_040.inc  ffcalc_044.f90  ffcalc_044.inc  ffcalc_050.f90  ffcalc_050.inc  ffcalc_052.f90  ffcalc_052.inc  ffcalc_057.f90  ffcalc_057.inc  ffcalc_058.f90  ffcalc_058.inc  ffcalc_061.f90  ffcalc_061.inc  ffcalc_064.f90  ffcalc_064.inc  ffcalc_065.f90  ffcalc_065.inc  ffcalc_066.f90  ffcalc_066.inc  ffcalc_067.f90  ffcalc_067.inc  ffcalc_069.f90  ffcalc_069.inc  ffcalc_112.f90  ffcalc_112.inc  ffcalc_115.f90  ffcalc_115.inc  ffcalc_116.f90  ffcalc_116.inc  ffcalc_143.f90  ffcalc_143.inc  ffcalc_164.f90  ffcalc_164.inc  (+55 more)
Unsupported Extras/: ReadMe.txt
buildscripts/: package-ubuntu20  package-windows.cmd
dash_license_emailer/: DASHKeys_test.xls  dash_license_creator.py  example.xls  japan_template_footer.unic  japan_template_header.unic  mail_smtp.py  mailer.py
distribution/share/dash/: RIETAN2000.tem  makezmatrix.py
distribution/share/doc/tutorials/tutorial-01/data/: Tutorial_01.mol2
distribution/share/doc/tutorials/tutorial-02/data/: Tutorial_02.xye
distribution/share/doc/tutorials/tutorial-03/data/: Tutorial_03-ModelC.zmatrix  Tutorial_03-cis.mol2  Tutorial_03.xye
distribution/share/doc/tutorials/tutorial-04/data/: Tutorial_04-half.mol2  Tutorial_04.xye  Tutorial_4-full.mol2
distribution/share/doc/tutorials/tutorial-05/data/: Tutorial_05-2.mol2  Tutorial_05.mol2  Tutorial_05.xye
distribution/share/doc/tutorials/tutorial-06/data/: Tutorial_06-frags.mol2
distribution/share/icons/dash/: dash.icns  dash_16x16.tif  dash_24x24.tif  dash_256x256.tif  dash_32x32.tif  dash_48x48.tif
doc/examples/: Example.dash  Example.dsl  Example.hcv  Example.pik  Example_1.zmatrix
doc/tutorials/tutorial-02/data/: Tutorial_2.mol2
doc/tutorials/tutorial-03/data/: Tutorial_3-ModelB.zmatrix
doc/tutorials/tutorial-06/data/: Tutorial_6.raw
expcli/: GSAS-EXPGUI.licence  Readme.txt  addcmds.tcl  expcli  export_cif.tcl  gsascmds.tcl  gsastcl.bat  gsastcl.sh  odf.tcl  readexp.tcl
icons/: dash_128x128.tif
installer/: Licence.txt  dash.xml  dash_en.lng
src/: ATMVAR.f90  Align.f90  Basic_Date.f90  Basic_Files.f90  Basic_IO.f90  Basic_Strings.f90  Basic_Vectors.f90  BatchMode.f90  Ccslmain.f90  Chi_sq_plot.F90  DICVAR.f90  DICVO2.f90  DICVO5.f90  DICVOL91.f90  Declarations.f90  Dialog_Routines.f90  Eval.f90  External_RR.f90  FWHM.f90  Fcn.f90  Fortic.f90  Frac2cart.f90  GLBVAR.INC  GSAS.f90  Init_Routines.f90  Initialisation.f90  Interface.f90  Lattice.inc  LoadRAWFiles.f90  LoadSDI.f90  MCBack.f90  MDB.f90  MONKEY1.F90  Main_Field_Changed_Routines.f90  Mogul.f90  MultiModal.f90  MultiRun.f90  PCDash_Main.f90.in  PCDruid_Resource.F90  PCDruid_resource.RC  (+59 more)
tests/testdata/: AABHTZ.mol2
vagrant/client-test/ubuntu-desktop/: Vagrantfile  wsl-vagrant
vagrant/client-test/ubuntu-headless/: Vagrantfile
vagrant/development/ubuntu-desktop/: Vagrantfile
vagrant/development/windows-2019/: Vagrantfile  wsl-vagrant
vagrant/scripts/: ubuntu-fetch-winteracter-ccdc-private.sh  ubuntu-initial.sh  ubuntu-install-client-libraries.sh  ubuntu-install-development-environment.sh  ubuntu-install-minimal-desktop.sh  ubuntu-install-xauth.sh  windows-add-chocolatey.ps1  windows-add-dotnet.ps1  windows-fetch-winteracter-ccdc-private.ps1  windows-install-development-packages.ps1  windows-install-intel-compiler.ps1
